added feature files for all the requests, post, patch del options